[Configs] disabled profiling by default

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ var ListItem = Backbone.ReuseView.extend({
         ],
         'pokefile': ['img.pokéfile',
             function setProfile($cachedElement, value){
-                $cachedElement[0].src = value;
+                // $cachedElement[0].src = value;
             }
         ],
         'title': ['h3',
