--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@ var Person = Backbone.Model.extend({
 
 var collection = new Backbone.Collection(), p;
 collection.length = count;
+window.console = window.console || {};
+window.console.time = window.console.time || function(){};
+window.console.timeEnd = window.console.timeEnd || function(){};
+
+
 console.time('create model');
 
 (function(collection, i, count){
