[Scrolling] added paddingTop to allow for elements above the scrolled items
- added refresh function to force a repaint of the view
- added a top padding to start at a lower position

--- a/workbenches/index.html
+++ b/workbenches/index.html
@@ -291,6 +291,8 @@ var Pool = Backbone.PerfView.extend({
         return 143;
     },
     
+    paddingTop: 22,
+    
     /*  
         The repaint function is responsible to:
          1. get the model in the collection
